Formulários - atributos básicos

--- a/html-css/formularios/index.html
+++ b/html-css/formularios/index.html
@@ -18,7 +18,10 @@
                     <p><strong>Input:</strong> É a maneira do usuário se comunicar com a página web.</p>
                 </li>
                 <li>
-                    <p><a href="./login.html" target="_blank">Formulário:</a> É um conjunto de inputs</p>
+                    <p><strong>Label:</strong> Representa uma legenda para um elemento HTML, geralmente é associado a um input em um formulário.</p>
+                </li>
+                <li>
+                    <p><a href="./login.html" target="_blank">Formulário</a>: É um conjunto de inputs</p>
                 </li>
             </ul>
         </section>
