--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -14,8 +14,11 @@
         <article>
             <form>
                 <!--Label é uma descrição de um input-->
-                <label for="">Nome</label>
-                <input type="text">
+                <!--O atributo for faz uma ligação semântica entre o label e o input-->
+                <label for="user-name">Nome</label>
+                <input type="text" id="user-name" name="name"><br>
+                <label for="password">Senha</label>
+                <input type="password" id="password">
             </form>
         </article>
     </main>
