--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -15,10 +15,20 @@
             <form>
                 <!--Label é uma descrição de um input-->
                 <!--O atributo for faz uma ligação semântica entre o label e o input-->
-                <label for="user-name">Nome</label>
-                <input type="text" id="user-name" name="name"><br>
-                <label for="password">Senha</label>
-                <input type="password" id="password">
+                <fieldset>
+                    <legend>Dados pessoais</legend>
+                    <label for="user-name">Nome: </label>
+                    <input type="text" id="user-name" name="name"><br>
+                    <label for="password">Senha: </label>
+                    <input type="password" id="password">
+                </fieldset>
+                <fieldset>
+                    <legend>Endereço</legend>
+                    <label for="street">Rua: </label>
+                    <input type="text" id="rua"><br>
+                    <label for="number">Número: </label>
+                    <input type="number" id="number">
+                </fieldset>
             </form>
         </article>
     </main>
