--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -29,6 +29,10 @@
                     <label for="number">Número: </label>
                     <input type="number" id="number">
                 </fieldset>
+                <br>
+                <label for="review">Deixe seu comentário: </label><br>
+                <textarea name="" id="review" cols="30" rows="10"></textarea><br>
+                <input type="submit" value="Enviar">
             </form>
         </article>
     </main>
