input do tipo file

--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -30,6 +30,10 @@
                     <input type="number" id="number">
                 </fieldset>
                 <br>
+
+                <label for="file">Escolha um arquivo: </label><br>
+                <input type="file" name="" id="file" multiple><br>
+
                 <label for="review">Deixe seu comentário: </label><br>
                 <textarea name="" id="review" cols="30" rows="10"></textarea><br>
                 <input type="submit" value="Enviar">
