--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -33,6 +33,20 @@
 
                 <label for="file">Escolha um arquivo: </label><br>
                 <input type="file" name="" id="file" multiple><br>
+                </form><br>
+
+                <fieldset>
+                    <legend>Checkbox</legend>
+                    <input type="checkbox" id="yellow" checked>
+                    <label for="yellow">Amarelo</label>
+                    <br>
+                    <input type="checkbox" id="blue">
+                    <label for="blue">Azul</label>
+                    <br>
+                    <input type="checkbox" id="red" disabled>
+                    <label for="red">Vermelho</label>
+                </fieldset>
+                <br>
 
                 <label for="review">Deixe seu comentário: </label><br>
                 <textarea name="" id="review" cols="30" rows="10"></textarea><br>
