Formulários - radio buttons

--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -48,6 +48,19 @@
                 </fieldset>
                 <br>
 
+                <fieldset>
+                    <legend>Radio button</legend>
+                    <!--Precisa ter o mesmo valor no atributo name-->
+                    <input type="radio" id="ryellow" name="colors" disabled>
+                    <label for="ryellow">Amarelo</label>
+                    <br>
+                    <input type="radio" id="rblue" name="colors">
+                    <label for="rblue">Azul</label>
+                    <br>
+                    <input type="radio" id="rred" name="colors" checked>
+                    <label for="rred">Vermelho</label>
+                </fieldset>
+
                 <label for="review">Deixe seu comentário: </label><br>
                 <textarea name="" id="review" cols="30" rows="10"></textarea><br>
                 <input type="submit" value="Enviar">
