outros tipos de inputs

--- a/html-css/formularios/login.html
+++ b/html-css/formularios/login.html
@@ -66,9 +66,18 @@
                 <input type="range" name="" id="volume" min="0" max="50" step="10" value="0">
                 <br><br>
 
+                <label for="color">Escolha uma cor: </label>
+                <input type="color" id="color">
+                <br><br>
+
+                <label for="date">Data</label>
+                <input type="date" id="date">
+                <br><br>
+
                 <label for="review">Deixe seu comentário: </label><br>
                 <textarea name="" id="review" cols="30" rows="10"></textarea><br>
                 <input type="submit" value="Enviar">
+                <button type="reset">Limpar</button>
             </form>
         </article>
     </main>
