--- a/html-css/seletores/background.html
+++ b/html-css/seletores/background.html
@@ -9,9 +9,23 @@
 </head>
 <body>
     <h1>A propriedade background</h1>
-
-    <div>
-        Texto 01
-    </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, eius. Officia aliquid quaerat voluptatum illo soluta magni nostrum maiores optio aliquam! Ducimus, quidem vitae! Modi earum doloremque sapiente alias ut!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, eius. Officia aliquid quaerat voluptatum illo soluta magni nostrum maiores optio aliquam! Ducimus, quidem vitae! Modi earum doloremque sapiente alias ut!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam cumque quia excepturi inventore? Nostrum laudantium repellendus incidunt necessitatibus quis repudiandae tempore eius, deleniti libero ducimus alias aperiam ipsum, deserunt esse!
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, libero sed perferendis voluptatibus est aperiam dolorum numquam voluptate facere, nemo dolor sequi nam impedit id corrupti ab, adipisci accusantium sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, illo quae, magnam exercitationem cumque laudantium et cum architecto voluptatibus aliquid commodi similique error? Magnam libero velit id, unde fugiat quos. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae cupiditate sint nulla aliquam blanditiis, quisquam distinctio? Veritatis ipsa ratione in, libero tempore rerum est vitae, tenetur iste officia quas distinctio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt obcaecati, odit inventore consequatur ipsa repellat cumque in rem voluptate pariatur placeat, nihil quis eligendi ad totam similique? Dolorum, quisquam doloribus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nostrum quis quibusdam fugit voluptates cumque temporibus aliquid voluptate earum esse amet ad sequi unde laborum deserunt, sint tenetur! Hic, ea?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis id, excepturi, ab possimus, corporis beatae minus dolores laborum harum earum blanditiis error! Illo reiciendis iste quibusdam, officia ea tempore dolorem?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nisi quisquam accusamus illo? Totam ad laboriosam eaque cum, esse unde placeat fugiat iusto eos dignissimos, quisquam soluta ratione id excepturi?
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere voluptas reiciendis, illo laboriosam laborum consequatur delectus, ad dolorum debitis eum ipsa beatae quisquam, quasi tempore ea accusamus quia dolorem repellendus.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti dignissimos, cupiditate aperiam alias id culpa quisquam architecto suscipit cum facilis obcaecati, odio eveniet, recusandae aliquam quo distinctio? Earum, dicta.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptas ab, ratione optio exercitationem minus ducimus fuga nesciunt deserunt, earum, ex eveniet quas praesentium voluptate provident ipsam officiis non qui.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi labore voluptate minus exercitationem explicabo obcaecati, nobis sapiente aliquam repellat nihil, dolorum quam impedit nostrum nesciunt. Quasi dolorem officia maxime doloremque.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ut natus cumque, saepe vitae odio consequatur dignissimos veniam, temporibus explicabo aut amet illum voluptate iure ducimus repellat aspernatur molestias vero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, id iure officia dolores, perferendis quidem amet molestias distinctio quam quisquam rem deserunt minima sunt ex libero cumque! Magnam, quasi quaerat?
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias placeat laboriosam blanditiis corporis aliquam temporibus illo error dolores suscipit eum magnam perferendis, soluta repellat aliquid, quia ipsam asperiores eius. Ad.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia, rem iusto dolore ab laborum ut repudiandae quis cumque eligendi vel laboriosam saepe tempore ullam nemo voluptas fugit quasi commodi dicta!
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus rem esse doloremque, porro delectus quo pariatur corrupti cum? Tempore et nulla libero labore. Pariatur accusantium molestias dolorem expedita quisquam ullam?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptas, quidem, quam minus laborum, suscipit fugiat earum iste ducimus delectus nulla. Repellendus architecto libero enim voluptatibus consequuntur veniam, atque eligendi.
+    
+    </p>
 </body>
 </html>
