--- a/html-css/responsividade/index.html
+++ b/html-css/responsividade/index.html
@@ -10,7 +10,15 @@
 <body>
     <div class="container">
         <h1>Lorem ipsum dolor</h1>
-        <img src="./img/cat01.jpg" alt="imagem de gato" width="500px" class="img">
+        <picture>
+
+            <source media="(max-width: 576px)" srcset="./img/cat05.jpg" type="image/jpg">
+            <source media="(max-width: 768px)" srcset="./img/cat04.jpg" type="image/jpg">
+            <source media="(max-width: 992px)" srcset="./img/cat03.jpg" type="image/jpg">
+            <source media="(max-width: 1200px)" srcset="./img/cat02.jpg" type="image/jpg">
+
+            <img src="./img/cat01.jpg" alt="imagem de gato" width="500px" class="img">
+        </picture>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aliquam cum unde facere aliquid praesentium labore impedit alias asperiores quidem quos, recusandae magni ipsam autem incidunt dolor expedita nam quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat laboriosam ea, quia suscipit consequatur eius inventore fuga iure, facere amet ducimus incidunt dolores nihil consequuntur aliquam aperiam veritatis distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sunt quod voluptate iusto vero temporibus corporis dignissimos distinctio dicta! In praesentium maxime eaque necessitatibus consectetur reiciendis nesciunt deleniti cum. Error.</p>
         <h2>Lorem ipsum dolor</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aliquam cum unde facere aliquid praesentium labore impedit alias asperiores quidem quos, recusandae magni ipsam autem incidunt dolor expedita nam quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat laboriosam ea, quia suscipit consequatur eius inventore fuga iure, facere amet ducimus incidunt dolores nihil consequuntur aliquam aperiam veritatis distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sunt quod voluptate iusto vero temporibus corporis dignissimos distinctio dicta! In praesentium maxime eaque necessitatibus consectetur reiciendis nesciunt deleniti cum. Error.</p>
