--- a/html-css/responsividade/index.html
+++ b/html-css/responsividade/index.html
@@ -8,6 +8,22 @@
     <title>Design Responsivo</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <ul class="nav-menu">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+                <li>Item 7</li>
+                <li>Item 8</li>
+                <li>Item 9</li>
+                <li>Item 10</li>
+            </ul>
+        </div>
+    </header>
     <div class="container">
         <h1>Lorem ipsum dolor</h1>
         <picture>
