--- a/html-css/responsividade/index.html
+++ b/html-css/responsividade/index.html
@@ -20,7 +20,7 @@
                 <li>Item 7</li>
                 <li>Item 8</li>
                 <li>Item 9</li>
-                <li>Item 10</li>
+                <!--<li>Item 10</li>-->
             </ul>
         </div>
     </header>
