--- a/html-css/responsividade/index.html
+++ b/html-css/responsividade/index.html
@@ -43,6 +43,34 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque natus animi numquam explicabo ad ut sit, necessitatibus, assumenda enim aspernatur accusamus ipsam! Beatae, ab alias? Autem eos incidunt at natus.</p>
         </div>
         <h2>Lorem ipsum dolor</h2>
+
+        <div class="cards">
+
+            <div>
+
+                <img src="./img/cat04.jpg" alt="imagem de gato" width="100%">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero laudantium, mollitia illo error minus id.</p>
+                <a href="#">Ver mais</a>
+
+            </div>
+
+            <div>
+
+                <img src="./img/cat04.jpg" alt="imagem de gato" width="100%">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero laudantium, mollitia illo error minus id.</p>
+                <a href="#">Ver mais</a>
+
+            </div>
+
+            <div>
+
+                <img src="./img/cat04.jpg" alt="imagem de gato" width="100%">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero laudantium, mollitia illo error minus id.</p>
+                <a href="#">Ver mais</a>
+
+            </div>
+
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aliquam cum unde facere aliquid praesentium labore impedit alias asperiores quidem quos, recusandae magni ipsam autem incidunt dolor expedita nam quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat laboriosam ea, quia suscipit consequatur eius inventore fuga iure, facere amet ducimus incidunt dolores nihil consequuntur aliquam aperiam veritatis distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sunt quod voluptate iusto vero temporibus corporis dignissimos distinctio dicta! In praesentium maxime eaque necessitatibus consectetur reiciendis nesciunt deleniti cum. Error.</p>
         <h2>Lorem ipsum dolor</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aliquam cum unde facere aliquid praesentium labore impedit alias asperiores quidem quos, recusandae magni ipsam autem incidunt dolor expedita nam quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat laboriosam ea, quia suscipit consequatur eius inventore fuga iure, facere amet ducimus incidunt dolores nihil consequuntur aliquam aperiam veritatis distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sunt quod voluptate iusto vero temporibus corporis dignissimos distinctio dicta! In praesentium maxime eaque necessitatibus consectetur reiciendis nesciunt deleniti cum. Error.</p>
